v0.8.0: plugin parity — 17 capability cells flipped to native
Six of eight plugins rewritten to match each tool's May 2026 feature
surface. The capability matrix went from "context + rules + MCP" coverage
to honest "what the tool actually accepts" coverage.

Per plugin:

- gemini: emits .gemini/agents/<name>.md, .gemini/commands/<name>.toml
  (TOML not markdown — Gemini's slash-command format), and a hooks block
  in .gemini/settings.json covering all 11 Cascade events. Scoped hooks
  reuse the existing scope-guard wrapper unchanged — Gemini's hook
  contract matches Claude's (JSON on stdin, exit-2 blocks). Skills
  project AS Gemini agents with trigger info appended to the description.
- cursor: emits .cursor/hooks.json, .cursor/agents/<n>.md,
  .cursor/commands/<n>.md (bare markdown), .cursor/skills/<n>/SKILL.md
  (Cursor 2.4+ native format — replaces legacy .cursor/rules/skill-*.mdc).
- cline: adds MCP (.cline/cline_mcp_settings.json), hooks
  (.clinerules/hooks/<event>.json), workflows-as-commands
  (.clinerules/workflows/), and YAML frontmatter `paths:` globs on
  individual rule files (replaces filename-prefix scope encoding).
- windsurf: emits .windsurf/hooks.json with all 12 Cascade hook types
  (Claude PreToolUse/PostToolUse → Cascade via matcher inspection) and
  .windsurf/mcp_config.json (project-local; canonical user path is
  ~/.codeium/windsurf/ — info warning with activation hint).
- copilot: emits .github/agents/<slug>.agent.md (GA in May 2026) and
  .github/mcp.json. Suppresses agent emission when claude target is
  also enabled since VS Code/Copilot auto-discovers .claude/agents/.
- continue: native .continue/permissions.yaml (replaces perms-guard
  wrapper for continue — wrapper retained for gemini) and native
  .continue/prompts/<n>.md slash commands.

Plus reviewer-driven follow-ups:

- scope-guard's extractToolFilePath now also probes root-level keys for
  Windsurf Cascade envelope shape (was Claude-only). 3 regression tests.
- Cursor lowercase